--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,9 @@ install:
   - gem update --system
   - gem install sass
   - gem install jekyll -v 3.2.1
+
+script:
+  - sbt ++$TRAVIS_SCALA_VERSION clean compile tut coverage test coverageReport
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
