--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,5 @@ script:
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
+  - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then bash
+    scripts/publishMicrosite.sh; fi
