Try using GhPages instead of Github4s

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ matrix:
     env:
 
 before_install:
+  - if [ "$PUBLISH_SITE" = "true" -a "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then bash
+    scripts/decryptKeys.sh; fi
  - export PATH=${PATH}:./vendor/bundle
 
 install:
