--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: scala
 
 scala:
-  - 2.12.2
+  - 2.10.6
   - 2.11.11
+  - 2.12.2
 
 jdk:
   - oraclejdk8
@@ -37,6 +38,8 @@ after_success:
   - bash <(curl -s https://codecov.io/bash)
   - if [ "$PUBLISH_SITE" = "true" -a "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then bash
     scripts/publishMicrosite.sh; fi
+  - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" && $(cat version.sbt) =~ "-SNAPSHOT" ]; then
+    scripts/publishSnapshot.sh; fi
 
 before_cache:
   - find $HOME/.sbt -name "*.lock" -type f -delete
