Update Travis .yml with new sbt-header command

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ install:
   - gem install jekyll -v 3.2.1
 
 script:
-  - sbt ++$TRAVIS_SCALA_VERSION clean checkHeaders compile tut coverage test coverageReport
+  - sbt ++$TRAVIS_SCALA_VERSION clean headerCheck compile tut coverage test coverageReport
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
